--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <header>
-      <%= render 'diaries/navbar' %>
+      <%= render 'weights/navbar' %>
       <%= render "layouts/flash_messages" %>
     </header>
     <div class="base-container">
