プロフィールページの実装

--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -1,10 +1,12 @@
 <% flash.each do |key, msg| %>
   <% if key == "notice" %>
     <div class="alert alert-success" role="alert">
+      <button class="close" data-dismiss ="alert" aria-hidden = "true">&times;</button>
       <%= msg %>
     </div>
   <% elsif key == "alert" %>
     <div class="alert alert-danger" role="alert">
+      <button class="close" data-dismiss ="alert" aria-hidden = "true">&times;</button>
       <%= msg %>
     </div>
   <% end %>
