--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -1,4 +1,5 @@
 <%= Gon::Base.render_data %>
+<p>こんにちは、<%= @user.email%>さん </p>
 <h1>Diaries#index</h1>
 <p>Find me in app/views/diaries/index.html.erb</p>
 
