--- a/app/views/weights/_navbar.html.erb
+++ b/app/views/weights/_navbar.html.erb
@@ -14,19 +14,15 @@
           <a class="nav-link" href="#">過去の履歴</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">プロフィール設定</a>
+          <%= link_to "プロフィール", user_profiles_path(current_user.id), class: "nav-link" %>
         </li>
         <% if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "アカウント編集", edit_user_registration_path, class: "nav-link" %>
+            <%= link_to "アカウント情報", edit_user_registration_path, class: "nav-link" %>
           </li>
           <li class="nav-item active">
             <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link" %>
           </li>
-          <li class="nav-item active">
-            <div class="nav-link">こんにちは <%= @user.email %>さん</div>
-          </li>
-
         <% else %>
           <li class="nav-item active">
             <%= link_to "新規登録", new_user_registration_path, class: "nav-link" %>
