プロフィール画面の新規投稿の実装とナビバーの修正

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -7,6 +7,6 @@
 
 <hr>
 
-<%= link_to edit_user_profiles_path(current_user.id), class: 'btn btn-primary btn-block mb-4' do %>
+<%= link_to edit_user_profile_path(current_user.id), class: 'btn btn-primary btn-block mb-4' do %>
   <span>編集する</span>
 <% end %>
