--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,6 +1,6 @@
-<h1>プロフィール編集</h1>
+<h1>プロフィール作成</h1>
 
-<%= form_with model: @profile, url: user_profile_path(current_user.id), method: :patch, local: true do |f| %>
+<%= form_with model: @profile, url: user_profile_path(current_user.id), method: :post, local: true do |f| %>
     <div class="form-group">
         <%= f.label :nickname, "【ニックネーム】16文字以内" , class: "control-label col-xs-2"%><small>必須</small>
         <%= f.text_field :nickname, maxlength: 16,placeholder: @profile.nickname,class: "form-control", rows: "3" %>
@@ -18,7 +18,7 @@
         <%= f.select :active, [["ほぼ運動しない。通勤、デスクワーク程度", 0], ["軽い運動。週に1回〜2回程度の運動", 1], ["中程度の運動。週に3回〜5回程度の運動", 2], ["激しい運動。週に6回〜7回程度の運動", 3], ["非常に激しい運動。1日に2回程度の運動", 4]], include_blank: "選択して下さい", class: "form-control" %>
     </div>
     <div class="form-group">
-        <%= f.submit "編集する", class: "btn btn-primary btn-block" %>
+        <%= f.submit "作成する", class: "btn btn-primary btn-block" %>
     </div>
 <% end %>
 
