--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,6 +1,7 @@
 <h1>アカウント情報</h1>
 
 <p>ニックネーム：<%= @profile.nickname %></p>
+<p>性別：<%= @profile.gender %></p>
 <p>年齢：<%= @profile.age %>才</p>
 <p>身長：<%= @profile.height %>cm</p>
 <p>運動頻度：<%= @exercize_frequency %></p>
