--- a/app/views/meals/_edit_modal_content.html.erb
+++ b/app/views/meals/_edit_modal_content.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: Weight.new, method: :patch do |form| %>
+<%= form_with model: Meal.new, method: :patch do |form| %>
   <div class="input-group">
     <div class="input-group-prepend">
       <span class="input-group-text">日付</span>
@@ -12,14 +12,6 @@
     </div>
     <%= form.number_field :weight, class: 'form-control', id: "edit-weight", in: 10.0..200.0, step: '0.1', required: true %>
     <div class="ml-2 my-auto">kg</div>
-  </div>
-  <small>小数第1位まで記録できます</small>
-  <div class="input-group mt-3">
-    <div class="input-group-prepend">
-      <span class="input-group-text">体脂肪率</span>
-    </div>
-    <%= form.number_field :body_fat, class: 'form-control', id: "edit-body-fat", in: 3.0..100.0, step: '0.1', required: true %>
-    <div class="ml-2 my-auto">%</div>
   </div>
   <small>小数第1位まで記録できます</small>
   <div class="form-group mt-3">
