--- a/app/views/weights/_new_modal_content.html.erb
+++ b/app/views/weights/_new_modal_content.html.erb
@@ -14,6 +14,14 @@
     <div class="ml-2 my-auto">kg</div>
   </div>
   <small>小数第1位まで記録できます</small>
+  <div class="input-group mt-3">
+    <div class="input-group-prepend">
+      <span class="input-group-text">体脂肪率</span>
+    </div>
+    <%= form.number_field :body_fat, class: 'form-control', id: "new-body-fat", in: 3.0..100.0, step: '0.1', required: true %>
+    <div class="ml-2 my-auto">%</div>
+  </div>
+  <small>小数第1位まで記録できます</small>
   <div class="form-group mt-3">
     <%= form.submit '新規登録', class: 'btn btn-primary btn-block', id: 'new-button' %>
   </div>
