--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -6,9 +6,7 @@
 
 <% end %>
 
-<h1>Diaries#index</h1>
-<p>Find me in app/views/diaries/index.html.erb</p>
-
+<h1>体重の管理</h1>
 <div class="row">
   <div class="col-6">
     <button type="button" class="btn btn-info btn-block" data-toggle="modal" data-target="#new-modal">
