--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,13 +17,15 @@
 */
 
 @import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 body{
   margin: 60px 0;
 }
 
  // 全体
-.base-container {
+.container {
   max-width: 768px;
   margin: 0 auto;
   padding: 1rem;
@@ -32,5 +34,12 @@ body{
 button.close {
   overflow : hidden;
   outline : none;
+}
+
+.favorite-color {
+  color:#ffcc33;
+}
+.ban-color{
+  color:#dc3545;
 }
 
