--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,11 @@
   <body>
     <header>
       <%= render 'weights/navbar' %>
-      <%= render "layouts/flash_messages" %>
+      <div class = "flash time-limit">
+        <%= render "layouts/flash_messages" %>
+      </div>
     </header>
-    <div class="base-container">
+    <div class="container">
     <%= yield %>
     </div>
     
