--- a/app/views/weights/_navbar.html.erb
+++ b/app/views/weights/_navbar.html.erb
@@ -7,10 +7,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">過去の履歴</a>
-        </li>
         <% if user_signed_in? %>
+          <li class="nav-item active">
+            <%= link_to "体重の管理", weight_path(current_user.id), class: "nav-link" %>
+          </li>
           <li class="nav-item active">
             <%= link_to "今日の食事", user_meals_path(current_user.id), class: "nav-link" %>
           </li>
